Bump parent pom and fix test execution with java 21